change UI background color

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 .container-content {
     width: 800px;
     height: 500px;
-    background-color: red;
+    background-color:#ddd;
     margin: auto auto;
 }
